fixed choice page overflowing image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -407,6 +407,7 @@ body.choice-view .lesson-content > section {
 	align-items: center;
 	cursor: pointer;
 	padding: 3rem;
+	overflow: hidden;
 }
 
 body.choice-view .lesson-content h1 {
